--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "author": "Katie Bullock",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/KatieBullock/moonshot.git"
+    "url": "https://github.com/KatieBullock/moonshot.git"
   }
 }
